# grepplus

./: .gitignore  Cargo.toml  README.md  install.sh  paper.md
.github/workflows/: ci.yml  release.yml
Formula/: grepplus.rb
crates/gp-agent-eval/: Cargo.toml
crates/gp-agent-eval/src/: lib.rs
crates/gp-chunk/: Cargo.toml
crates/gp-chunk/src/: ast.rs  lib.rs
crates/gp-cli/: Cargo.toml
crates/gp-cli/src/: main.rs  welcome.rs
crates/gp-core/: Cargo.toml
crates/gp-core/src/: config.rs  embed_stats.rs  error.rs  lib.rs  query.rs  traits.rs  types.rs
crates/gp-embed/: Cargo.toml
crates/gp-embed/src/: catalog.rs  download.rs  hf.rs  lib.rs  manifest.rs  onnx.rs  ort_session.rs  picker.rs  progress.rs  pull.rs  util.rs  variants.rs
crates/gp-eval/: Cargo.toml
crates/gp-eval/src/: lib.rs
crates/gp-fusion/: Cargo.toml
crates/gp-fusion/src/: lib.rs
crates/gp-grep/: Cargo.toml
crates/gp-grep/src/: lexical.rs  lib.rs  ripgrep.rs  unix_grep.rs
crates/gp-grep/tests/: grep.rs
crates/gp-index/: Cargo.toml
crates/gp-index/src/: ann.rs  cache.rs  files.rs  jit.rs  lib.rs  store.rs  temperature.rs  vectors.rs  watch.rs
crates/gp-laser/: Cargo.toml
crates/gp-laser/src/: expand.rs  lib.rs
crates/gp-pq4/: Cargo.toml
crates/gp-pq4/src/: backend.rs  learned.rs  lib.rs  pca.rs  quant.rs  score.rs  train.rs
crates/gp-research/: Cargo.toml
crates/gp-research/src/: ablate.rs  lib.rs  router_traces.rs  triplets.rs
crates/gp-router/: Cargo.toml
crates/gp-router/src/: features.rs  learned.rs  lib.rs  trace.rs
crates/gp-search/: Cargo.toml
crates/gp-search/src/: lib.rs
crates/gp-serve/: Cargo.toml
crates/gp-serve/src/: lib.rs
crates/gp-sketch/: Cargo.toml
crates/gp-sketch/src/: bm25.rs  lib.rs
eval/agentcode/: README.md  queries-100.jsonl  queries.jsonl
eval/agentcode/repos/mini/auth/: session.rs  token.rs
eval/agentcode/repos/mini/resilience/: breaker.rs  fallback.rs
eval/agentcode/repos/mini/retry/: backoff.rs
models/: catalog.json
scripts/: homebrew-sha.sh
src/: lib.rs
src/agent_eval/: mod.rs
src/chunk/: ast.rs  mod.rs
src/cli/: mod.rs  welcome.rs
src/core/: config.rs  embed_stats.rs  mod.rs  query.rs  traits.rs
src/embed/: catalog.rs  download.rs  hf.rs  manifest.rs  mod.rs  onnx.rs  ort_session.rs  picker.rs  progress.rs  pull.rs  variants.rs
src/eval/: mod.rs
src/fusion/: mod.rs
src/grep/: lexical.rs  mod.rs  ripgrep.rs  unix_grep.rs
src/index/: ann.rs  cache.rs  files.rs  jit.rs  mod.rs  store.rs  temperature.rs  vectors.rs  watch.rs
src/laser/: expand.rs  expand.toml  mod.rs
src/research/: mod.rs  router_traces.rs
src/router/: features.rs  learned.rs  mod.rs  trace.rs
src/search/: mod.rs
src/serve/: mod.rs
src/sketch/: bm25.rs  minhash.rs  mod.rs
tests/: cli_smoke.rs  grep.rs
xtask/src/: main.rs
