[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1.10"
regex = "1.10"
walkdir = "2"
ignore = "0.4"
memchr = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ort = { version = "2.0.0-rc.4", features = ["half"] }
tokenizers = "0.20"
ndarray = "0.17"
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"
half = "2"
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
inquire = "0.7"
console = "0.15"
tempfile = "3"
num_cpus = "1"
notify = "6.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
