[package]
name = "gp-agent-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gp-core = { path = "../gp-core" }
gp-eval = { path = "../gp-eval" }
gp-serve = { path = "../gp-serve" }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
