[package]
name = "gp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grepplus"
path = "src/main.rs"

[[bin]]
name = "gp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
gp-agent-eval = { path = "../gp-agent-eval" }
gp-chunk = { path = "../gp-chunk" }
gp-core = { path = "../gp-core" }
gp-embed = { path = "../gp-embed" }
gp-eval = { path = "../gp-eval" }
gp-fusion = { path = "../gp-fusion" }
gp-grep = { path = "../gp-grep" }
gp-index = { path = "../gp-index" }
gp-laser = { path = "../gp-laser" }
gp-research = { path = "../gp-research" }
gp-router = { path = "../gp-router" }
gp-search = { path = "../gp-search" }
gp-serve = { path = "../gp-serve" }
gp-sketch = { path = "../gp-sketch" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
