[package]
name = "gp-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gp-core = { path = "../gp-core" }
ndarray = { workspace = true }
ort = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
indicatif = { workspace = true }
inquire = { workspace = true }
console = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
half = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
