[package]
name = "gp-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gp-core = { path = "../gp-core" }
gp-embed = { path = "../gp-embed" }
gp-grep = { path = "../gp-grep" }
gp-fusion = { path = "../gp-fusion" }
gp-laser = { path = "../gp-laser" }
gp-index = { path = "../gp-index" }
gp-router = { path = "../gp-router" }
gp-search = { path = "../gp-search" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
