[package]
name = "gp-grep"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gp-core = { path = "../gp-core" }
ignore = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
