[package]
name = "gp-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
gp-chunk = { path = "../gp-chunk" }
gp-core = { path = "../gp-core" }
gp-pq4 = { path = "../gp-pq4" }
gp-sketch = { path = "../gp-sketch" }
ignore = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
