[package]
name = "gp-laser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gp-chunk = { path = "../gp-chunk" }
gp-core = { path = "../gp-core" }
gp-grep = { path = "../gp-grep" }
regex = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
