[package]
name = "gp-research"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gp-chunk = { path = "../gp-chunk" }
gp-core = { path = "../gp-core" }
gp-embed = { path = "../gp-embed" }
gp-eval = { path = "../gp-eval" }
gp-index = { path = "../gp-index" }
gp-pq4 = { path = "../gp-pq4" }
gp-search = { path = "../gp-search" }
gp-sketch = { path = "../gp-sketch" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
