[package]
name = "gp-serve"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
gp-core = { path = "../gp-core" }
gp-embed = { path = "../gp-embed" }
gp-index = { path = "../gp-index" }
gp-router = { path = "../gp-router" }
gp-search = { path = "../gp-search" }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
