[package]
name = "gp-sketch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gp-chunk = { path = "../gp-chunk" }
gp-core = { path = "../gp-core" }
ignore = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
